Fixing z-index

--- a/frontend/src/Components/Registration/register-login.css
+++ b/frontend/src/Components/Registration/register-login.css
@@ -19,7 +19,6 @@
 .container {
     z-index: 100;
     position: absolute;
-    width: max-content;
 }
 
   .header {
